[project]
name = "stockmarketapp"
version = "0.1.0"
description = "Super Simple Stock Market App -  Global Beverage Corporation Exchange is a new stock market trading in drinks companies. This Stock Market application simulates basic operations such as calculating the dividend yield, P/E ratio, recording trades, calculating volume-weighted stock price, and computing the all-share index for a given set of stocks"
authors = [
    {name = "Abishek KJ",email = "jayabishek91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
